--- a/scss/post.scss
+++ b/scss/post.scss
@@ -1,9 +1,8 @@
+//for rules
+
 #page-content
 {                                                                                                           
     //background-image: url([[pix:theme_drak|loginbackgroundimage]]);                                                                
     //background-size: cover;     
-    background-color: blue;                                                                                                    
+    background-color: #000000;                                                                                                    
 }
-
-
-   
