--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -1,2 +1,5 @@
-$mycoolcolour: #0F3B56 !default;
-$border-radius: 15px;
+//for variables
+
+/*$mycoolcolour: #0F3B56 !default;
+$border-radius: 15px;*/
+$primary: #83080E ;
